--- a/my_icefall_yes_no_dataset_recipe.ipynb
+++ b/my_icefall_yes_no_dataset_recipe.ipynb
@@ -39,6 +39,7 @@
         "collapsed": true
       },
       "source": [
+        "# originate from https://k2-fsa.github.io/icefall/recipes/Non-streaming-ASR/yesno/tdnn.html#colab-notebook\n",
         "#1. Install PyTorch, torchaudio, k2\n",
         "import torch\n",
         "print(torch.__version__)\n",
@@ -124,7 +125,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KP4RZ31xTKzL",
-        "outputId": "ebca29cb-2a8d-4109-9de0-3bb031da72df"
+        "outputId": "ebca29cb-2a8d-4109-9de0-3bb031da72df",
+        "collapsed": true
       },
       "source": [
         "#3. install icefall\n",
@@ -186,7 +188,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vzyw8VyfUjUB",
-        "outputId": "dcc91d3a-19ec-4d7c-8302-00d7021c5198"
+        "outputId": "dcc91d3a-19ec-4d7c-8302-00d7021c5198",
+        "collapsed": true
       },
       "source": [
         "#4. data preparation\n",
